--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "hardhat-deploy": "^0.9.14"
   },
   "dependencies": {
+    "@nomiclabs/hardhat-etherscan": "^2.1.8",
     "@openzeppelin/contracts": "^4.4.1",
-    "base64-sol": "^1.1.0"
+    "base64-sol": "^1.1.0",
+    "dotenv": "^10.0.0"
   }
 }
