--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "hardhat-deploy": "^0.9.14"
   },
   "dependencies": {
+    "@chainlink/contracts": "^0.3.0",
     "@nomiclabs/hardhat-etherscan": "^2.1.8",
     "@openzeppelin/contracts": "^4.4.1",
     "base64-sol": "^1.1.0",
