--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@chainlink/contracts": "^0.3.0",
+    "@chainlink/token": "^1.1.0",
     "@nomiclabs/hardhat-etherscan": "^2.1.8",
     "@openzeppelin/contracts": "^4.4.1",
     "base64-sol": "^1.1.0",
